get test fixtures for universal bins + lipo extracted bins
Signed-off-by: Alex Goodman <alex.goodman@anchore.com>

--- a/pkg/macho/test-fixtures/fixture-ls/Makefile
+++ b/pkg/macho/test-fixtures/fixture-ls/Makefile
@@ -1,13 +1,19 @@
 ROOT=$(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 CACHE_DIR=$(ROOT)/../assets
 
-BIN=$(CACHE_DIR)/ls_signed
+BIN=$(CACHE_DIR)/ls_universal_signed
+EXTRACTED_BIN=$(CACHE_DIR)/ls_x86_64_signed
 
 .PHONY: check-mac all
-all: check-mac $(BIN)
+all: check-mac $(BIN) $(EXTRACTED_BIN)
 
 $(BIN):
 	cp /bin/ls $(BIN)
+
+$(EXTRACTED_BIN): $(BIN)
+	cp $(BIN) $(BIN).tmp
+	lipo $(BIN) -thin x86_64 -output $(EXTRACTED_BIN)
+	mv $(BIN).tmp $(BIN)
 
 .PHONY: check-mac
 check-mac:
