--- a/pkg/macho/test-fixtures/fixture-ls/Makefile
+++ b/pkg/macho/test-fixtures/fixture-ls/Makefile
@@ -4,8 +4,8 @@ CACHE_DIR=$(ROOT)/../assets
 BIN=$(CACHE_DIR)/ls_universal_signed
 EXTRACTED_BIN=$(CACHE_DIR)/ls_x86_64_signed
 
-.PHONY: check-mac all
-all: check-mac $(BIN) $(EXTRACTED_BIN)
+.PHONY: check all
+all: check $(BIN) $(EXTRACTED_BIN)
 
 $(BIN):
 	cp /bin/ls $(BIN)
@@ -16,8 +16,9 @@ $(EXTRACTED_BIN): $(BIN)
 	mv $(BIN).tmp $(BIN)
 
 .PHONY: check-mac
-check-mac:
+check:
 	@if [ $(shell uname) != "Darwin" ]; then echo "must run this on a mac" && exit 1; fi;
+	@if [ $(shell uname -m) != "x86_64" ]; then echo "must run this on x86_64" && exit 1; fi;
 
 .PHONY: clean
 clean:
