--- a/internal/test/test-fixtures/fixture-syft/Makefile
+++ b/internal/test/test-fixtures/fixture-syft/Makefile
@@ -1,17 +1,22 @@
 ROOT=$(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 CACHE_DIR=$(ROOT)/../assets
 
-BIN=$(CACHE_DIR)/syft_signed
+SIGNED_BIN=$(CACHE_DIR)/syft_signed
+UNSIGNED_BIN=$(CACHE_DIR)/syft_unsigned
 
 .PHONY: all
-all: $(BIN)
+all: $(SIGNED_BIN) $(UNSIGNED_BIN)
 
-$(BIN):
+$(SIGNED_BIN):
 	curl -sSfL https://github.com/anchore/syft/releases/download/v0.35.0/syft_0.35.0_darwin_amd64.zip \
 		-o $(CACHE_DIR)/syft_0.35.0_darwin_amd64.zip
 	cd $(CACHE_DIR) && tar -xvzf syft_0.35.0_darwin_amd64.zip syft
 	mv $(CACHE_DIR)/syft $(BIN)
 	rm -f $(CACHE_DIR)/syft_0.35.0_darwin_amd64.zip
+
+$(UNSIGNED_BIN):
+	GOBIN=$(shell realpath $(CACHE_DIR)) go install github.com/anchore/syft@v0.35.0
+	mv $(CACHE_DIR)/syft $(CACHE_DIR)/syft_unsigned
 
 .PHONY: clean
 clean:
