add certstrap fixture (not working)
Signed-off-by: Alex Goodman <alex.goodman@anchore.com>

--- a/internal/test/test-fixtures/fixture-certstrap/Makefile
+++ b/internal/test/test-fixtures/fixture-certstrap/Makefile
@@ -22,10 +22,16 @@ CERT_LEAF_NAME=$(NAME)-leaf
 CERT_LEAF_PATH=$(DEPO_PATH)/$(CERT_LEAF_NAME).crt
 CERT_LEAF_KEY_PATH=$(DEPO_PATH)/$(CERT_LEAF_NAME).key
 
-CHAIN_PATH=$(DEPO_PATH)/$(NAME)-chain.cert.pem
+CHAIN_PATH=$(DEPO_PATH)/$(NAME)-chain.pem
 P12_PATH=$(DEPO_PATH)/$(NAME).p12
 P12_PASSWORD=$(PASSPHRASE)
 
+KEYCHAIN_NAME=quill-test-$(NAME)
+# note, you could do this with /Library/Keychains/System.keychain , but is not recommended
+KEYCHAIN_PATH="${HOME}/Library/Keychains/$(KEYCHAIN_NAME)-db"
+KEYCHAIN_PASSWORD=$(PASSPHRASE)
+
+IDENTITY=$(NAME)-code-signing-id
 
 .PHONY: all
 all: $(P12_PATH)
@@ -55,20 +61,11 @@ $(CA_INTERMEDIATE_CERT_PATH):
 
 
 $(CERT_LEAF_PATH): $(CA_INTERMEDIATE_CERT_PATH)
-	./create-code-signing-cert-request.sh \
+	./create-code-signing-certificate.sh \
 		$(DEPO_PATH) \
 		$(CA_INTERMEDIATE_CERT_PATH) \
-		$(CA_INTERMEDIATE_KEY_PATH)
-
-	$(CERTSTEAP_CMD) \
-		sign \
-			$(CERT_LEAF_NAME) \
-			--CA $(CA_INTERMEDIATE_NAME) \
-			--expires '25 years' \
-			--passphrase $(PASSPHRASE)
-
-	# verify the certificate: we should see our x509 extensions needed for codesigning
-	bash -c "openssl x509 -text -noout -in $(CERT_LEAF_PATH) | grep -A1 'X509v3' || (echo 'could not find x509 extensions in certificate' && false)"
+		$(CA_INTERMEDIATE_KEY_PATH) \
+		$(IDENTITY)
 
 	# sanity check: should be able to verify the full chain with openssl
 	cat $(CA_ROOT_CERT_PATH) > $(CHAIN_PATH)
@@ -84,6 +81,29 @@ $(P12_PATH): $(CERT_LEAF_PATH)
           -in $(CERT_LEAF_PATH) \
           -passin "pass:$(PASSPHRASE)" \
           -passout "pass:$(P12_PASSWORD)"
+
+
+.PHONY: install-trust
+install-trust:
+	@if [ ! -f "$(KEYCHAIN_PATH)" ]; then \
+  		security create-keychain -p "$(KEYCHAIN_PASSWORD)" "$(KEYCHAIN_NAME)"; \
+  	else \
+  	  echo "keychain '$(KEYCHAIN_NAME)' already exists"; \
+  	fi
+
+	# import the cert into the keychain
+	# note: set the partition list for this certificate's private key to include "apple-tool:" and "apple:" allows the codesign command to access this keychain item without an interactive user prompt.
+	security import $(P12_PATH) -P $(P12_PASSWORD) -f pkcs12 -k $(KEYCHAIN_PATH) -T /usr/bin/codesign
+	security set-key-partition-list -S "apple-tool:,apple:,codesign:" -s -k "$(KEYCHAIN_PASSWORD)" $(KEYCHAIN_PATH)
+	security add-trusted-cert -d -r trustRoot -k $(KEYCHAIN_PATH) $(CERT_LEAF_PATH)
+
+	# add the keychain to the search path (otherwise codesign will not see an identity)
+	./add-keychain.sh "${KEYCHAIN_NAME}"
+
+	# make certain there are identities that can be used for codesigning
+	security find-identity -p codesigning $(KEYCHAIN_PATH) | grep -C 30 $(IDENTITY)
+
+	security list-keychains | grep "${KEYCHAIN_NAME}"
 
 
 .PHONY: clean
