[wip] chain working
Signed-off-by: Alex Goodman <alex.goodman@anchore.com>

--- a/internal/test/test-fixtures/fixture-chain/intermediate_req.config
+++ b/internal/test/test-fixtures/fixture-chain/intermediate_req.config
@@ -4,4 +4,4 @@ prompt             = no
 
 [ req_distinguished_name ]
 countryName = US
-commonName  = Quill Test Intermediate CA
+commonName  = quill-test-intermediate-ca
