--- a/internal/test/test-fixtures/fixture-chain/leaf_req.config
+++ b/internal/test/test-fixtures/fixture-chain/leaf_req.config
@@ -5,9 +5,10 @@ distinguished_name    = codesign_dn           # DN template
 req_extensions        = codesign_ext          # Desired extensions
 
 [ codesign_dn ]
-commonName            = Quill Test Leaf
+commonName            = quill-test-leaf
 
 [ codesign_ext ]
+# http://www.flyingcanuck.ca/posts/2021-08-27_iOS15ServerCertIssue/
 keyUsage              = critical,digitalSignature
 extendedKeyUsage      = critical,codeSigning
 subjectKeyIdentifier  = hash
