--- a/internal/test/test-fixtures/fixture-chain/root_req.config
+++ b/internal/test/test-fixtures/fixture-chain/root_req.config
@@ -4,4 +4,4 @@ prompt             = no
 
 [ req_distinguished_name ]
 countryName = US
-commonName  = Quill Test Root CA
+commonName  = quill-test-root-ca
