--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,9 +7,9 @@ release:
   draft: true
 
 builds:
-  - binary: quill
-    dir: ./cmd/quill
-    env:
+  - binary: &name quill
+    dir: &dir ./cmd/quill
+    env: &build-env
       - CGO_ENABLED=0
     goos:
       - linux
@@ -17,9 +17,8 @@ builds:
       - darwin
     goarch:
       - amd64
-    # Set the modified timestamp on the output binary to the git timestamp (to ensure a reproducible build)
-    mod_timestamp: '{{ .CommitTimestamp }}'
-    ldflags: |
+    mod_timestamp: &build-timestamp '{{ .CommitTimestamp }}'
+    ldflags: &build-ldflags |
       -w
       -s
       -extldflags '-static'
@@ -28,6 +27,45 @@ builds:
       -X github.com/anchore/quill/internal/version.buildDate={{.Date}}
       -X github.com/anchore/quill/internal/version.gitDescription={{.Summary}}
 
-archives:
-  - format: tar.gz
+  - id: darwin-build
+    dir: *dir
+    binary: *name
+    goos:
+      - darwin
+    goarch:
+      - amd64
+      - arm64
+    mod_timestamp: *build-timestamp
+    env: *build-env
+    ldflags: *build-ldflags
+    hooks:
+      post:
+        - cmd: .tmp/quill sign-and-notarize "{{ .Path }}" --dry-run={{ .IsSnapshot }} --ad-hoc={{ .IsSnapshot }} -vv
+          env:
+            - QUILL_LOG_FILE=/tmp/quill-{{ .Target }}.log
 
+  - id: windows-build
+    dir: *dir
+    binary: *name
+    goos:
+      - windows
+    goarch:
+      - amd64
+    mod_timestamp: *build-timestamp
+    env: *build-env
+    ldflags: *build-ldflags
+
+
+archives:
+  - id: linux-archives
+    builds:
+      - linux-build
+
+  - id: darwin-archives
+    builds:
+      - darwin-build
+
+  - id: windows-archives
+    format: zip
+    builds:
+      - windows-build
