add release trigger and update coverage approach
Signed-off-by: Alex Goodman <alex.goodman@anchore.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,7 +73,7 @@ jobs:
         uses: ./.github/actions/bootstrap
 
       - name: Build & publish release artifacts
-        run: make release
+        run: make ci-release
         env:
           QUILL_SIGN_P12: ${{ secrets.APPLE_SIGNING_P12 }}
           QUILL_SIGN_PASSWORD: ${{ secrets.APPLE_SIGNING_P12_PASSWORD }}
