disable draft releases
Signed-off-by: Alex Goodman <alex.goodman@anchore.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -4,7 +4,7 @@ release:
   prerelease: auto
 
   # If set to true, will not auto-publish the release. This is done to allow us to review the changelog before publishing.
-  draft: true
+  draft: false
 
 builds:
   - id: linux-build
